fix: zone flex 속성 수정 및 z-index 추가로 레이아웃 개선

--- a/www/src/view/page.flay-tag.scss
+++ b/www/src/view/page.flay-tag.scss
@@ -43,7 +43,7 @@ body {
       max-width: none;
 
       > .zone {
-        flex: 1;
+        flex: 1 1 auto;
         font-size: 14px;
         padding: 8px;
         border-radius: 8px;
@@ -66,6 +66,7 @@ body {
           font-size: 0.75rem;
           opacity: 0.7;
           transition: opacity 0.2s;
+          z-index: 10;
 
           &:hover {
             opacity: 1;
@@ -103,7 +104,6 @@ body {
 
         &[data-type='and'] {
           border-color: rgba(59, 130, 246, 0.5);
-
           label {
             background-color: #3b82f6;
           }
@@ -111,7 +111,6 @@ body {
 
         &[data-type='or'] {
           border-color: rgba(16, 185, 129, 0.5);
-
           label {
             background-color: #10b981;
           }
@@ -119,10 +118,13 @@ body {
       }
 
       > .add-zone-buttons {
+        position: absolute;
+        top: calc(-1rem - 0.4rem);
+        right: 0;
         display: flex;
-        flex-direction: column;
         gap: 4px;
         margin: 0;
+        z-index: 10;
 
         button {
           font-size: 0.75rem;
